--- a/templates/signup/profile.html
+++ b/templates/signup/profile.html
@@ -1,6 +1,10 @@
-<h1>Profile Registeration</h1>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 
-<h2>Basic Info</h2>
+
+
+<h2>Hi Prof, please complete your profile</h2>
+
 
 <form method='POST' action='' enctype="multipart/form-data">
     {% csrf_token %}
@@ -10,4 +14,3 @@
 
 </form>
 
-<h2>Project Info</h2>
